--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 blis==0.2.4
 certifi==2019.3.9
 chardet==3.0.4
+colorama==0.4.1
 cycler==0.10.0
 cymem==2.0.2
 Django==2.2.1
 django-crispy-forms==1.7.2
 django-form-utils==1.0.3
+django-pandas==0.6.1
 en-core-web-sm==2.1.0
 idna==2.8
 imageio==2.5.0
@@ -20,6 +22,7 @@ pandas==0.24.2
 Pillow==6.0.0
 plac==0.9.6
 preshed==2.0.1
+pydotplus==2.0.2
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pytz==2019.1
