--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ blis==0.2.4
 certifi==2019.3.9
 chardet==3.0.4
 colorama==0.4.1
-cycler==0.10.0
-cymem==2.0.2
 Django==2.2.1
 django-crispy-forms==1.7.2
 django-form-utils==1.0.3
@@ -11,28 +9,15 @@ django-pandas==0.6.1
 idna==2.8
 imageio==2.5.0
 jsonschema==2.6.0
-kiwisolver==1.1.0
-matplotlib==3.0.3
-mglearn==0.1.7
-murmurhash==1.0.2
-nltk==3.4.1
-numpy==1.23.4
-pandas==0.24.2
-Pillow==6.0.0
-plac==0.9.6
-preshed==2.0.1
-pydotplus==2.0.2
-pyparsing==2.4.0
-python-dateutil==2.8.0
-pytz==2019.1
-requests==2.21.0
-scikit-learn==0.20.3
-scipy==1.9.3
-six==1.12.0
-spacy==2.1.3
-sqlparse==0.3.0
-srsly==0.0.5
-thinc==7.0.4
-tqdm==4.31.1
-urllib3==1.24.3
-wasabi==0.2.1
+matplotlib
+mglearn
+nltk
+numpy
+pandas
+plac
+pydotplus
+scikit-learn
+scipy
+spacy
+sqlparse
+notebook
