--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.7.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
+asgiref==3.8.1
 asttokens==3.0.0
 async-lru==2.0.4
 attrs==24.2.0
@@ -20,13 +21,16 @@ colorama==0.4.6
 comm==0.2.2
 confection==0.1.5
 contourpy==1.3.1
+crispy-bootstrap5==2024.10
 cycler==0.12.1
 cymem==2.0.10
 debugpy==1.8.9
 decorator==5.1.1
 defusedxml==0.7.1
-Django==2.2.1
-django-crispy-forms==1.7.2
+Django==5.1.4
+django-bootstrap4==24.4
+django-crispy-forms==2.3
+django-extensions==3.2.3
 django-form-utils==1.0.3
 executing==2.1.0
 fastjsonschema==2.21.1
